syntax = "proto3";
package perception_feature.proto;
//option cc_enable_arenas = true;
enum DataSourceType{
  DT_RESERVED = 0;
  CSV_DATA = 1;
}
message DataSource {
  DataSourceType data_type = 1;//数据类型
  string biz_name = 2;//业务名称
  string data_conf = 3;//数据配置文件
}
message DataSourceList {
  string version = 1;
  string description = 2;
  repeated DataSource data_source = 3;
}

enum FeatureDataType{
  FT_RESERVED = 0;
  STRING_TYPE = 1;
  INTEGER_TYPE = 2;
  REAL_TYPE = 3;
}

message CsvDataConfig{
  int32 column = 1;
  string feature_name = 2;
  FeatureDataType feature_data_type = 3;
}
message CsvDataConfigList{
  string version = 1;
  string description = 2;
  string data_path = 3;
  string separator = 4;
  string file_extension = 5;
  repeated CsvDataConfig config_list = 6;
}
